tests/profiles/overlays/istio/test_data/expected/apps_v1_deployment_profiles-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    kustomize.component: profiles
  name: profiles-deployment
  namespace: kubeflow
spec:
  replicas: 1
  selector:
    matchLabels:
      kustomize.component: profiles
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
      labels:
        kustomize.component: profiles
    spec:
      containers:
      - args:
        - -userid-header
        - ""
        - -userid-prefix
        - ""
        - -workload-identity
        - ""
        command:
        - /manager
        image: gcr.io/kubeflow-images-public/profile-controller:vmaster-g34aa47c2
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /metrics
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 30
        name: manager
        ports:
        - containerPort: 8080
          name: manager-http
          protocol: TCP
      - args:
        - -cluster-admin
        - anonymous
        - -userid-header
        - ""
        - -userid-prefix
        - ""
        command:
        - /access-management
        image: gcr.io/kubeflow-images-public/kfam:vmaster-gf3e09203
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /metrics
            port: 8081
          initialDelaySeconds: 30
          periodSeconds: 30
        name: kfam
        ports:
        - containerPort: 8081
          name: kfam-http
          protocol: TCP
      serviceAccountName: profiles-controller-service-account
