tests/profiles/overlays/istio/test_data/expected/default_networking.istio.io_v1alpha3_virtualservice_kfam.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kfam
spec:
  gateways:
  - kubeflow-gateway
  hosts:
  - '*'
  http:
  - headers:
      request:
        add:
          x-forwarded-prefix: /kfam
    match:
    - uri:
        prefix: /kfam/
    rewrite:
      uri: /kfam/
    route:
    - destination:
        host: profiles-kfam.kubeflow.svc.cluster.local
        port:
          number: 8081
