tests/profiles/overlays/istio/test_data/expected/kubeflow_~g_v1_configmap_profiles-profiles-parameters-tf7b8dmggt.yaml
apiVersion: v1
data:
  admin: anonymous
  gcp-sa: ""
  userid-header: ""
  userid-prefix: ""
kind: ConfigMap
metadata:
  labels:
    kustomize.component: profiles
  name: profiles-profiles-parameters-tf7b8dmggt
  namespace: kubeflow
